plugins {
    id 'java'
    id 'eclipse'
    id 'idea'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.0.7'
    id "com.github.ben-manes.versions" version "0.21.0"
    //id "io.freefair.lombok" version "3.1.4"
    id 'net.ltgt.apt' version '0.21'
    id 'org.beryx.jlink' version '2.9.4'
}

repositories {
    mavenLocal()
    maven { url = 'http://jcenter.bintray.com' }
    maven { url = 'http://repo.maven.apache.org/maven2' }
    maven { url 'https://projectlombok.org/edge-releases' }
}

dependencies {
    compile 'org.controlsfx:controlsfx:11.0.0-RC2'
    compile 'com.jfoenix:jfoenix:9.0.8'
    compile 'org.fxmisc.richtext:richtextfx:0.9.3'
    compile 'com.1stleg:jnativehook:2.1.0'
    compile 'commons-io:commons-io:2.6'
    compile 'org.json:json:20180813'
    compile group: 'eu.hansolo', name: 'Medusa', version: '8.3'
    compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.8.1'
    compile group: 'com.google.guava', name: 'guava', version: '27.1-jre'
    //compile 'com.github.almasb:fxgl:11.1-beta'
       
    compile files('libs/scenicview.jar')
    
    compileOnly 'org.projectlombok:lombok:edge-SNAPSHOT'
    compileOnly group: 'org.mapstruct', name: 'mapstruct-processor', version: '1.3.0.Final'
    
	annotationProcessor 'org.projectlombok:lombok:edge-SNAPSHOT'
    annotationProcessor group: 'org.mapstruct', name: 'mapstruct-processor', version: '1.3.0.Final'
}

javafx {
    modules = [ 'javafx.controls',
    			'javafx.fxml',
    			'javafx.graphics',
    			'javafx.swing',
    			'javafx.web',
    			'javafx.media' ]
}

eclipse {
    classpath {
        file {
            whenMerged {
                entries.findAll { 
                	it.kind == 'src' || it.kind == 'lib' 
                }.each { it.entryAttributes['module'] = 'true' }
            }
        }
    }
}

group = 'pl.hopelew'
version = '0.1'
description = 'jRPG NoName Game'
ext.moduleName = 'jrpg'
mainClassName = moduleName + '/pl.hopelew.jrpg.Main'

sourceCompatibility = '11'
targetCompatibility = '11'

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

jar {
    manifest {
        attributes 'Main-Class': mainClassName
        attributes 'Automatic-Module-Name': moduleName
    }
    inputs.property("moduleName", moduleName)
}

jlink {
    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
    launcher {
        name = 'jrpg'
        jvmArgs = ['--add-exports javafx.controls/com.sun.javafx.scene.control.behavior=com.jfoenix', '--add-exports javafx.controls/com.sun.javafx.scene.control=com.jfoenix', '--add-exports javafx.base/com.sun.javafx.binding=com.jfoenix', '--add-exports javafx.graphics/com.sun.javafx.stage=com.jfoenix', '--add-exports javafx.base/com.sun.javafx.event=com.jfoenix -Dprism.verbose=true']
        
    }
    addExtraDependencies("javafx")
    
}

/*
tasks.jlink.doLast {
    copy {
        from('src/main/resources')
        into("$buildDir/image/bin")
    }
} */

